--- a/index.html
+++ b/index.html
@@ -182,9 +182,17 @@
               <div class="resume-item">
                 <h4>SDE-1</h4>
                 <p>
-                <h5>App-Scoop Solutions<em> (Pune, Maharashtra) </em></h5>
-                <h5>May 2023 - Present</h5>
-                </p>
+                <h5>App-Scoop Solutions<em> (Remote) </em></h5>
+                <h5>May 2023 - Present</h5><br>
+                <!-- • Collaborated on a social-media project aimed at streamlining post automation processes. <br>
+                • Increased efficiency by 10% through the automation of posting processes, resulting in smoother content delivery and
+                improved engagement metrics.<br>
+                • Used Jenkins for CI/CD, automating code deployment and testing. Decreased build and test time by 15%, improving the
+                development pipeline and team productivity.<br>
+                • Facilitated seamless integration and efficient communication among system components, resulting in a 50% reduction in
+                system downtime.<br>
+                • Spearheaded the implementation of 10+ new features, enhancing the platform’s capabilities and user experience. -->
+                  </p>
               </div>
               <div class="resume-item">
                 <h4>Backend Developer</h4>
@@ -192,6 +200,7 @@
                 <h5>Zerot Energy<em> (Pune, Maharashtra) </em></h5>
                 <h5>Jan 2023 - April 2023</h5>
                 </p>
+                
               </div>
               <div class="resume-item">
                 <h4>Associate Software Developer</h4>
@@ -395,7 +404,7 @@
                   <p>Web</p>
                   <div class="portfolio-links">
 
-                    <a href="https://cafecreamyheavenn.000webhostapp.com/" class="portfolio-details-lightbox"
+                    <a href="https://creamyheaven.netlify.app/" class="portfolio-details-lightbox"
                       data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                   </div>
                 </div>
