--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
 						<span class="date">SDE-2</span>
 						<h2>App-Scoop Solutions</h2>
 						<span class="position">May 2023-Present</span>
-						<p class="mt-4">
+						<!-- <p class="mt-4">
 							<b>CourseWork :</b>
 							Git and GitHub, Jenkins or GitLab CI, Terraform, Docker,
 							Kubernetes, Ansible, Prometheus, AWS or Azure, Slack and Microsoft Teams Integration,
 							DevSecOps Practices.
-						</p>
+						</p> -->
 					</div>
 				</div>
 
@@ -184,9 +184,9 @@
 						<span class="date">Backend Developer</span>
 						<h2>Zerot Energy</h2>
 						<span class="position">January 2023-May 2023</span>
-						<p class="mt-4"><b>CourseWork :</b> Programming Fundamentals, Web Development, Database
+						<!-- <p class="mt-4"><b>CourseWork :</b> Programming Fundamentals, Web Development, Database
 							Management Systems , Cloud Computing Basics fundamentals
-							, Operating Systems, Software Engineering Principles</p>
+							, Operating Systems, Software Engineering Principles</p> -->
 					</div>
 				</div>
 				<div class="col-md-6">
@@ -194,12 +194,12 @@
 						<span class="date">Associate Software Developer</span>
 						<h2>Kleem Research and Marketing</h2>
 						<span class="position">June 2021 - January 2023</span>
-						<p class="mt-4">
+						<!-- <p class="mt-4">
 							<b>CourseWork :</b>
 							Git and GitHub, Jenkins or GitLab CI, Terraform, Docker,
 							Kubernetes, Ansible, Prometheus, AWS or Azure, Slack and Microsoft Teams Integration,
 							DevSecOps Practices.
-						</p>
+						</p> -->
 					</div>
 				</div>
 			</div>
