updated hamburgur and contact form

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 
 				</ul>
-
 			</div>
 		</div>
 	</nav>
@@ -61,7 +60,7 @@
 					<div class="text">
 						<span class="subheading">Hello!</span>
 						<h1 class="mb-4 mt-3">I'm <span>Aadesh Patil</span></h1>
-						<h2 class="mb-4 mt-3 anim-typewriter">Full Stack Developer </span></h2>
+						<h2 class="mb-4 mt-3 anim-typewriter">Full Stack Developer</span></h2>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate">
 								<a href="https://twitter.com/AadeshPatil18" target="_blank"><span
@@ -448,29 +447,28 @@ privacy and thwarting unauthorized access. Achieved a 30% decrease in security v
 				</div>
 			</div>
 			<div class="col-lg-12 mt-5 mt-lg-0">
-				<div class="">
-					<div class="row">
-						<div class="col-md-6 form-group">
-							<input type="text" name="name" class="form-control bg-secondary" id="name"
-								placeholder="Your Name" required>
-						</div>
-						<div class="col-md-6 form-group mt-3 mt-md-0">
-							<input type="email" class="form-control bg-secondary" name="email" id="email"
-								placeholder="Your Email" required>
-						</div>
+				<div class="row">
+					<div class="col-md-6 form-group ">
+						<input type="text" name="name" class="form-control bg-secondary" id="name" required>
+						<label for="name" style="left: 28px;">Your Name</label>
 					</div>
-					<div class="form-group mt-3">
-						<input type="text" class="form-control bg-secondary" name="subject" id="subject"
-							placeholder="Subject" required>
+					<div class="col-md-6 form-group mt-3 mt-md-0">
+						<input type="email" class="form-control bg-secondary " name="email" id="email" required>
+						<label for="email" style="left: 28px;">Your Email</label>
 					</div>
-					<div class="form-group mt-3">
-						<textarea class="form-control bg-secondary" name="message" id="message" rows="5"
-							placeholder="Message" required></textarea>
-					</div>
-					<div class="text-center">
-						<button type="submit" class="btn btn-primary py-3 px-5" onclick="sendMail()">Send
-							Message</button>
-					</div>
+				</div>
+				<div class="form-group mt-3">
+					<input type="text" class="form-control bg-secondary " name="subject" id="subject" required>
+					<label for="subject">Subject</label>
+				</div>
+				<div class="form-group mt-3">
+					<textarea class="form-control bg-secondary " name="message" id="message" rows="5"
+						required></textarea>
+					<label for="message">Message</label>
+				</div>
+				<div class="text-center">
+					<button type="submit" class="btn btn-primary py-3 px-5" onclick="sendMail()">Send
+						Message</button>
 				</div>
 			</div>
 		</div>
@@ -563,8 +561,8 @@ privacy and thwarting unauthorized access. Achieved a 30% decrease in security v
 						</div>
 					</div>
 				</div>
-				</div>
 			</div>
+		</div>
 		</div>
 	</footer>
 
